--- a/data/freesolv/meta.yaml
+++ b/data/freesolv/meta.yaml
@@ -1,45 +1,45 @@
+---
 name: freesolv
 description: Experimental and calculated small molecule hydration free energies
 targets:
-- id: exp_value
-  description: experimental hydration free energy value
-  units: kcal/mol
-  type: continuous
-  names:
-  - hydration free energy
-- id: exp_uncertainty
-  description: experimental hydration free energy uncertainty
-  units: kcal/mol
-  type: continuous
-  names:
-  - hydration free energy uncertainty
-- id: GAFF
-  description: mobley group calculated value
-  units: kcal/mol
-  type: continuous
-  names:
-  - hydration free energy computed using the GAFF force field
-- id: calc_uncertainty
-  description: mobley group calculated value calculated uncertainty
-  units: kcal/mol
-  type: continuous
-  names:
-  - uncertainty in hydration free energy computed using the GAFF force field
+    - id: exp_value
+      description: experimental hydration free energy value
+      units: kcal/mol
+      type: continuous
+      names:
+          - hydration free energy
+    - id: exp_uncertainty
+      description: experimental hydration free energy uncertainty
+      units: kcal/mol
+      type: continuous
+      names:
+          - hydration free energy uncertainty
+    - id: GAFF
+      description: mobley group calculated value
+      units: kcal/mol
+      type: continuous
+      names:
+          - hydration free energy computed using the GAFF force field
+    - id: calc_uncertainty
+      description: mobley group calculated value calculated uncertainty
+      units: kcal/mol
+      type: continuous
+      names:
+          - uncertainty in hydration free energy computed using the GAFF force field
 identifiers:
-- id: SMILES
-  type: SMILES
-  description: SMILES
-- id: iupac_name
-  type: IUPAC
-  description: IUPAC
+    - id: SMILES
+      type: SMILES
+      description: SMILES
+    - id: iupac_name
+      type: IUPAC
+      description: IUPAC
 license: CC BY-NC-SA 4.0
 links:
-- url: https://github.com/MobleyLab/FreeSolv
-  description: issue tracker and source data
-- url: https://escholarship.org/uc/item/6sd403pz
-  description: repository with data
+    - url: https://github.com/MobleyLab/FreeSolv
+      description: issue tracker and source data
+    - url: https://escholarship.org/uc/item/6sd403pz
+      description: repository with data
 num_points: 642
 bibtex:
-- "@article{mobley2013experimental,\n            title={Experimental and calculated\
-  \ small molecule hydration free energies},\n            author={Mobley, David L},\n\
-  \            year={2013}"
+    - "@article{mobley2013experimental,\n            title={Experimental and calculated small molecule hydration free energies},\n            author={Mobley,\
+      \ David L},\n            year={2013}"
