--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
         "pytdc>=0.3.9",
         "transformers",
         "wandb",
+        "pubchempy"
 ]
 
 dynamic = ["version"]
