--- a/data/m1_muscarinic_receptor_agonists_butkiewicz/meta.yaml
+++ b/data/m1_muscarinic_receptor_agonists_butkiewicz/meta.yaml
@@ -32,7 +32,10 @@ links:
       description: corresponding publication
     - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
       description: corresponding publication
-split_col: split
+benchmarks:
+    - name: TDC
+      link: https://tdcommons.ai/
+      split_column: split
 num_points: 61833
 url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
 bibtex:
