--- a/data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
+++ b/data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
@@ -37,7 +37,10 @@ links:
       description: corresponding publication
     - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
       description: corresponding publication
-split_col: split
+benchmarks:
+    - name: TDC
+      link: https://tdcommons.ai/
+      split_column: split
 num_points: 100875
 url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
 bibtex:
