--- a/data/herg_blockers/meta.yaml
+++ b/data/herg_blockers/meta.yaml
@@ -1,11 +1,8 @@
 ---
 name: herg_blockers
-description: |-
-    Human ether-a-go-go related gene (hERG) is crucial for the coordination
-    of the heart's beating. Thus, if a drug blocks the hERG, it could lead to severe
-    adverse effects. Therefore, reliable prediction of hERG liability in the early
-    stages of drug design is quite important to reduce the risk of cardiotoxicity
-    related attritions in the later development stages.
+description: "Human ether-à-go-go related gene (hERG) is crucial for the coordination\nof the heart's beating. Thus, if a drug blocks the hERG, it could\
+    \ lead to severe\nadverse effects. Therefore, reliable prediction of hERG liability in the early\nstages of drug design is quite important to reduce\
+    \ the risk of cardiotoxicity\nrelated attritions in the later development stages."
 targets:
     - id: hERG_blocker
       description: whether it blocks hERG (1) or not (0)
@@ -15,8 +12,8 @@ targets:
           - hERG blocker
           - hERG active compound
           - hERG blocker
-          - human ether-a-go-go related gene (hERG) blocker
-          - activity against Human ether-a-go-go related gene (hERG)
+          - human ether-à-go-go related gene (hERG) blocker
+          - activity against Human ether-à-go-go related gene (hERG)
       uris:
           - http://purl.obolibrary.org/obo/MI_2136
 benchmarks:
