--- a/data/tabular/bioavailability_ma_et_al/meta.yaml
+++ b/data/tabular/bioavailability_ma_et_al/meta.yaml
@@ -97,6 +97,16 @@ templates:
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} has a {bioavailable#low&high} {bioavailable__names__noun}: {SMILES#}
     - Is the {SMILES__description} {SMILES#} {bioavailable__names__adjective}?<EOI> {bioavailable#yes&no}
     - |-
+      Task: Please classify a molecule based on the description.
+      Description: Predict if the molecule has a low or high {bioavailable__names__noun}?
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "low" or "high" without using any {#other|additional!} words.
+      Result:<EOI> {bioavailable#low&high}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that has a {bioavailable#low&high} {bioavailable__names__noun}.
+      Result:<EOI> {SMILES#}
+    - |-
       Task: Please answer the multiple choice question.
       Question: Has the molecule with the {SMILES__description} {#representation of |!}{SMILES#} a high {bioavailable__names__noun}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
