--- a/data/tabular/chebi_20/meta.yaml
+++ b/data/tabular/chebi_20/meta.yaml
@@ -14,7 +14,7 @@ identifiers:
     - id: SMILES
       type: SMILES
       description: SMILES
-    - id: compound_id
+    - id: CID
       type: Other
       names:
           - noun: compound id
@@ -61,3 +61,48 @@ bibtex:
                   pages = "375--413",
                   abstract = "We present MolT5 - a self-supervised learning framework for pretraining models on a vast amount of unlabeled natural language text and molecule strings. MolT5 allows for new, useful, and challenging analogs of traditional vision-language tasks, such as molecule captioning and text-based de novo molecule generation (altogether: translation between molecules and language), which we explore for the first time. Since MolT5 pretrains models on single-modal data, it helps overcome the chemistry domain shortcoming of data scarcity. Furthermore, we consider several metrics, including a new cross-modal embedding-based metric, to evaluate the tasks of molecule captioning and text-based molecule generation. Our results show that MolT5-based models are able to generate outputs, both molecules and captions, which in many cases are high quality.",
                   }
+templates:
+    - |-
+      The molecule with the {SMILES__description} {#representation of |!}{SMILES#} can be described {#by|as!}:
+      {#description}
+    - |-
+      Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule can be described {#by|as!}:
+      {#description}
+    - |-
+      Task: Please create a {#text |!}description for a molecule{# based on its representation|!}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question with {#full|complete!} sentences.
+      Result: {description#}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: {description#}
+      Result: {SMILES#}
+    - |-
+      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule based in this description:
+      {#description}
+      Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
+    - |-
+      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that can be described {#by|as!}:
+      {#description}
+      Assistant: This is a molecule that fits {#your|this!} description: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
+      User: Yes, please. The molecule can be described {#by|as!}:
+      {#description}
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} fits {#your|this!} description: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
+      User: Yes, the molecule can be described {#by|as!}:
+      {#description}
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} fits {#your|this!} description: {SMILES#}
+    - |-
+      Task: Please create a {#text |!}description for a molecule{# based on its representation|!}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question with {#full|complete!} sentences.
+      Result:<EOI> {description#}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: {description#}
+      Result:<EOI> {SMILES#}
