--- a/data/tabular/bicerano_dataset/meta.yaml
+++ b/data/tabular/bicerano_dataset/meta.yaml
@@ -110,5 +110,11 @@ templates:
       1/K.
     - The molecule with the {compound_name__id} of {compound_name#} has a computed rubber coefficient of thermal expansion (CTE) at 300K of {rubber_CTE_calc#}
       1/K.
-    - 'Question: What is a polymer with experimental glass transition temperature of {Tg_exp#} K and experimental density at 300 K of {rho_300K_exp#} g/cc.
+    - 'Question: What is a polymer with an experimental glass transition temperature of {Tg_exp#} K and experimental density at 300 K of {rho_300K_exp#}
+      g/cc. Answer: A polymer with {PSMILES__description} {PSMILES#}'
+    - 'Question: What is a polymer with a computed glass coefficient of thermal expansion (CTE) at 300K of {glass_CTE_calc#} and a computed rubber coefficient
+      of thermal expansion (CTE) at 300K of {rubber_CTE_calc#} 1/K. Answer: A polymer with {PSMILES__description} {PSMILES#}'
+    - 'Question: What is a polymer with a computed glass transition temperature of {Tg_calc#} K and a computed density at 300 K of {rho_300K_calc#} g/cc.
       Answer: A polymer with {PSMILES__description} {PSMILES#}'
+    - 'Question: What is a polymer with a computed glass transition temperature of {Tg_calc#} K and a computed glass coefficient of thermal expansion (CTE)
+      at 300K of {glass_CTE_calc#} 1/K. Answer: A polymer with {PSMILES__description} {PSMILES#}'
