--- a/data/tabular/carcinogens/meta.yaml
+++ b/data/tabular/carcinogens/meta.yaml
@@ -67,8 +67,8 @@ templates:
       properties.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {carcinogen#no &NULL}{carcinogen__names__adjective} {#properties|characteristics|features!}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {carcinogen#not &NULL}identified as {carcinogen__names__adjective}.
-    - The {SMILES__description} {SMILES#} is {carcinogen#no &NULL}{carcinogen__names__adjective}.
-    - The {#molecule |!}{SMILES__description} {SMILES#} is {carcinogen__names__adjective}.
+    - The {SMILES__description} {SMILES#} is {carcinogen#not &NULL}{carcinogen__names__adjective}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} is {carcinogen#not &NULL}{carcinogen__names__adjective}.
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {carcinogen__names__adjective}.
@@ -114,10 +114,6 @@ templates:
       {#Molecule |!}{SMILES__description}: {SMILES#}
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
       Result:<EOI> {carcinogen#False&True}
-    - |-
-      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
-      Description: A molecule that is {carcinogen__names__adjective}.
-      Result:<EOI> {SMILES#}
     - |-
       Task: Please answer the multiple choice question.
       Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {carcinogen__names__adjective}?
